# mtpremiado-api-extract

./: .dockerignore  .env.example  .gitignore  AJUSTES.md  API_GUIDE.md  Dockerfile  EASYPANEL.md  README.md  html-detalhe-pedido.html  html-lista-pedido.html  pyproject.toml  requirements.txt  setup.sh
debug_html/: page_1.html  page_1111.html
src/: __init__.py  main.py
src/api/: __init__.py
src/api/controllers/: __init__.py  pedidos_controller.py
src/api/routes/: __init__.py  pedidos_routes.py
src/api/schemas/: __init__.py  pedido_schema.py
src/core/: __init__.py  auth.py  exceptions.py  init_dirs.py  logger.py  page_cache.py  settings.py  state_manager.py
src/scraper/: __init__.py  debug_helper.py  detalhes.py  detalhes_playwright.py  listagem.py  listagem_playwright.py  parser.py  session.py  session_playwright.py
tests/: __init__.py  test_api.py  test_detalhes.py  test_listagem.py
